--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,5 +13,5 @@ steps:
 - script: curl -Lo duffle https://github.com/deislabs/duffle/releases/download/0.1.0-ralpha.5%2Benglishrose/duffle-linux-amd64 && chmod +x duffle && sudo cp duffle /usr/local/bin/ && rm duffle
   displayName: 'install duffle'
 
-- script: duffle build .
+- script: duffle init && duffle build .
   displayName: 'build bundle'
