--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -32,3 +32,8 @@ steps:
   env:
     CLUSTER: minikube
     REGISTRY: minikube
+
+- script: |
+    duffle credentials add ci/myk8s.yaml
+    duffle install myriff riff --credentials myk8s
+  displayName: 'duffle install'
