specify a working directory for fetch fats

--- a/ci/fetch-fats-step.yml
+++ b/ci/fetch-fats-step.yml
@@ -2,4 +2,5 @@ steps:
   - script: |
       ./ci/git-repo-fetch.sh $(fatsDir) $(fatsRefspec) projectriff/fats
       source $(fatsDir)/.util.sh
+    workingDirectory: '$(system.defaultWorkingDirectory)'
     displayName: 'fetch fats'
