--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -11,7 +11,7 @@ pool:
   vmImage: 'Ubuntu-16.04'
 
 steps:
-- template: ci/fetch-fats.step.yml
+- template: ci/fetch-fats-step.yml
 - script: |
     curl -Lo duffle https://github.com/deislabs/duffle/releases/download/0.1.0-ralpha.5%2Benglishrose/duffle-linux-amd64
     chmod +x duffle && sudo cp duffle /usr/local/bin/ && rm duffle
