--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -40,3 +40,5 @@ steps:
     duffle credentials add ci/myk8s.yaml
     duffle install myriff riff --credentials myk8s
   displayName: 'duffle install'
+
+- template: ci/publish-docker-image-steps.yml
