--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,44 +1,61 @@
-# Starter pipeline
-# Start with a minimal pipeline that you can customize to build and deploy your code.
-# Add steps that build, run tests, deploy, and more:
-# https://aka.ms/yaml
+jobs:
+- job: integration
+  variables:
+    fatsDir: '$(system.defaultWorkingDirectory)/../fats'
+    fatsRefspec: 2234005739491f39fabaa75098b19c6d521af324 # projectriff/fats master as of 2019-04-09
 
-variables:
-  fatsDir: '$(system.defaultWorkingDirectory)/../fats'
-  fatsRefspec: 2234005739491f39fabaa75098b19c6d521af324 # projectriff/fats master as of 2019-04-09
+  pool:
+    vmImage: 'Ubuntu-16.04'
 
-pool:
-  vmImage: 'Ubuntu-16.04'
+  steps:
+  - template: ci/fetch-fats-step.yml
+  - template: ci/install-duffle-step.yml
 
-steps:
-- template: ci/fetch-fats-step.yml
-- script: |
-    curl -Lo duffle https://github.com/deislabs/duffle/releases/download/0.1.0-ralpha.5%2Benglishrose/duffle-linux-amd64
-    chmod +x duffle && sudo cp duffle /usr/local/bin/ && rm duffle
-  displayName: 'install duffle'
+  - script: duffle init && duffle build .
+    displayName: 'build bundle'
 
-- script: duffle init && duffle build .
-  displayName: 'build bundle'
+  - script: |
+      $(fatsDir)/install.sh kubectl
+      $(fatsDir)/install.sh minikube
+    displayName: 'install tools'
 
-- script: |
-    $(fatsDir)/install.sh kubectl
-    $(fatsDir)/install.sh minikube
-  displayName: 'install tools'
+  - script: sudo apt-get update && sudo apt-get remove moby-engine moby-cli && sudo apt-get install docker.io=18.06.1-0ubuntu1.2~16.04.1
+    displayName: 'Downgrade Docker'
 
-- script: sudo apt-get update && sudo apt-get remove moby-engine moby-cli && sudo apt-get install docker.io=18.06.1-0ubuntu1.2~16.04.1
-  displayName: 'Downgrade Docker'
+  - script: |
+      minikube config set embed-certs true # this ensures that ~/.minikube is not needed in invocation image
+      source $(fatsDir)/start.sh
+    displayName: 'install and start minikube'
+    env:
+      CLUSTER: minikube
+      REGISTRY: minikube
 
-- script: |
-    minikube config set embed-certs true # this ensures that ~/.minikube is not needed in invocation image
-    source $(fatsDir)/start.sh
-  displayName: 'install and start minikube'
-  env:
-    CLUSTER: minikube
-    REGISTRY: minikube
+  - script: |
+      duffle credentials add ci/myk8s.yaml
+      duffle install myriff riff --credentials myk8s
+    displayName: 'duffle install'
 
-- script: |
-    duffle credentials add ci/myk8s.yaml
-    duffle install myriff riff --credentials myk8s
-  displayName: 'duffle install'
+  - template: ci/publish-docker-image-steps.yml
 
-- template: ci/publish-docker-image-steps.yml
+- job: publish
+  dependsOn: integration
+  condition: and(succeeded(), startsWith(variables['Build.SourceBranch'], 'refs/heads/v'))
+
+  pool:
+    vmImage: 'Ubuntu-16.04'
+
+  steps:
+  - template: ci/install-duffle-step.yml
+
+  - script: |
+      duffle init && duffle build .
+      duffle export riff
+    displayName: 'export bundle'
+
+  - template: ci/install-gcloud.yml
+
+  - bash: ./ci/publish.sh
+    env:
+      GCLOUD_CLIENT_SECRET: '$(GcloudClientSecret)'
+    displayName: 'Publish riff cnab bundle'
+  displayName: 'Publish'
