--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -35,7 +35,7 @@ steps:
   displayName: 'duffle install'
 
 - script: ./tests/run.sh
-  workingDir: $(fatsDir)
+  workingDirectory: $(fatsDir)
   env:
     CLUSTER: minikube
     REGISTRY: minikube
