--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -78,6 +78,13 @@ jobs:
   steps:
   - template: ci/fetch-fats-step.yml
   - template: ci/install-duffle-step.yml
+
+  - script: |
+      sudo apt-get update && sudo apt-get remove moby-engine moby-cli && sudo apt-get install docker.io=18.06.1-0ubuntu1.2~16.04.1
+      minikube config set embed-certs true
+    condition: and(succeeded(), eq(variables['CLUSTER'], 'minikube'))
+    displayName: 'setup minikube'
+
   - script: source $(fatsDir)/start.sh
     displayName: 'setup cluster'
 
