--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,16 +57,16 @@ jobs:
         qualifier: minikube
         cluster: minikube
         registry: dockerhub
-      # gke:
-      #   imageName: ubuntu-16.04
-      #   qualifier: gke
-      #   cluster: gke
-      #   registry: gcr
-      # windows:
-      #   imageName: windows-2019
-      #   qualifier: windows
-      #   cluster: gke
-      #   registry: gcr
+      gke:
+        imageName: ubuntu-16.04
+        qualifier: gke
+        cluster: gke
+        registry: gcr
+      windows:
+        imageName: windows-2019
+        qualifier: windows
+        cluster: gke
+        registry: gcr
   pool:
     vmImage: $(imageName)
   variables:
