--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -57,6 +57,11 @@ jobs:
         qualifier: minikube
         cluster: minikube
         registry: dockerhub
+      mac:
+        imageName: macOS-10.14
+        qualifier: mac
+        cluster: minikube
+        registry: docker-daemon
       gke:
         imageName: ubuntu-16.04
         qualifier: gke
