--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -49,6 +49,16 @@ jobs:
       GCLOUD_CLIENT_SECRET: '$(GcloudClientSecret)'
       FATS_DIR: $(fatsDir)
 
+  - bash: |
+      kubectl get deployments,services,pods --all-namespaces || true
+      echo "FAILING PODS:"
+      kubectl get pods --all-namespaces --field-selector=status.phase!=Running \
+      | tail -n +2 | awk '{print "-n", $1, $2}' | xargs -L 1 kubectl describe pod || true
+      echo "NODE:"
+      kubectl describe node || true
+    condition: failed()
+    displayName: 'diagnostics'
+
   - template: ci/install-gcloud.yml
 
   - bash: ./ci/publish.sh stage
