--- a/ci/install-duffle-step.yml
+++ b/ci/install-duffle-step.yml
@@ -1,5 +1,25 @@
+variables:
+  duffleVersion: '0.1.0-ralpha.5%2Benglishrose'
+
 steps:
   - script: |
-      curl -Lo duffle https://github.com/deislabs/duffle/releases/download/0.1.0-ralpha.5%2Benglishrose/duffle-linux-amd64
-      chmod +x duffle && sudo cp duffle /usr/local/bin/ && rm duffle
-    displayName: 'install duffle'
+      curl -Lo duffle https://github.com/deislabs/duffle/releases/download/$(duffleVersion)/duffle-linux-amd64
+      chmod +x duffle
+      sudo cp duffle /usr/local/bin/
+      rm duffle
+    condition: eq( variables['Agent.OS'], 'Linux' )
+    displayName: 'install duffle on linux'
+
+  - script: |
+      curl -Lo duffle https://github.com/deislabs/duffle/releases/download/$(duffleVersion)/duffle-darwin-amd64
+      chmod +x duffle
+      sudo cp duffle /usr/local/bin/
+      rm duffle
+    condition: eq( variables['Agent.OS'], 'Darwin' )
+    displayName: 'install duffle on mac'
+
+  - script: |
+      curl -Lo duffle.exe https://github.co//m/deislabs/duffle/releases/download/$(duffleVersion)/duffle-windows-amd64.exe
+      mv duffle.exe /usr/bin
+    condition: eq( variables['Agent.OS'], 'Windows_NT' )
+    displayName: 'install duffle on windows'
