--- a/ci/fetch-fats-step.yml
+++ b/ci/fetch-fats-step.yml
@@ -1,5 +1,5 @@
 steps:
-  - script: |
+  - bash: |
       ./ci/git-repo-fetch.sh $(fatsDir) $(fatsRefspec) projectriff/fats
       source $(fatsDir)/.util.sh
     workingDirectory: '$(system.defaultWorkingDirectory)'
