--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ jobs:
       version="`cat VERSION`-$(Build.BuildNumber)"
       file=riff-bundle-0.1.0-20190506.5.json
       curl -O https://storage.googleapis.com/projectriff/riff-cnab/builds/${file}
+      cat ci/myk8s.yaml
       duffle credentials add ci/myk8s.yaml
       duffle install myriff ${file} --bundle-is-file --credentials myk8s --insecure
     displayName: 'install riff from cnab bundle'
