--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,6 +20,7 @@ jobs:
       curl -O https://storage.googleapis.com/projectriff/riff-cnab/builds/${file}
       cat ci/myk8s.yaml
       tr -d '\015' <ci/myk8s.yaml >ci/myk8s-unix.yaml
+      duffle credentials list -v
       duffle credentials add ci/myk8s-unix.yaml -v
       duffle install myriff ${file} --bundle-is-file --credentials myk8s --insecure
     displayName: 'install riff from cnab bundle'
