--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -7,7 +7,7 @@ variables:
 jobs:
 - job: build
   pool:
-    vmImage: 'windows-2019'
+    vmImage: 'Ubuntu-16.04'
 
   steps:
   - template: ci/fetch-fats-step.yml
